# MdConverter

./: .gitignore  README.md
backend/: pyproject.toml
backend/converter/: engine.py  file_utils.py  main.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ConversionActions.module.css  ConversionActions.tsx  DropZone.module.css  DropZone.tsx  FileList.module.css  FileList.tsx  Footer.module.css  Footer.tsx  Icons.tsx  InfoSection.module.css  InfoSection.tsx  ProgressBar.module.css  ProgressBar.tsx  ResultsView.module.css  ResultsView.tsx  ThemeToggle.module.css  ThemeToggle.tsx
frontend/src/hooks/: useConverter.ts  useFileManager.ts  useLanguage.ts  useTheme.ts
frontend/src/i18n/: translations.ts
frontend/src/services/: fileDialog.ts  tauriCommands.ts
frontend/src/styles/: global.css  theme.css
frontend/src/types/: index.ts
scripts/: Install MdConverter.command  build-sidecar.ps1  build-sidecar.sh  setup.ps1  setup.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  sidecar.rs
