[project]
name = "mdconverter-backend"
version = "0.1.0"
description = "MdConverter Python backend — MarkItDown sidecar"
requires-python = ">=3.12"
dependencies = [
    "markitdown[all]>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["converter"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
